--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>spring-ioc</module>
         <module>spring-aop</module>
+        <module>java-proxy</module>
     </modules>
 
     <dependencyManagement>
