--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
                 <artifactId>spring-context</artifactId>
                 <version>5.1.11.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>28.2-jre</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
